--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 
         I am advised by Professor Jacqueline McCleary with the Northeastern University Cosmology Group as well as Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. This summer I will be visiting with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
 
- Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, snail-mail me your thoughts! Below, you can find a couple of pictures of me where I am most happy ^_^, usually when I am attending conferences with my <a href="https://ebrmn.space/peeps.html" style="color: #ff3333;">friends</a> and traversing the local neighborhood</div> <br>
+ Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, snail-mail me your thoughts! Below, you can find a couple of pictures of me where I am most happy ^_^, usually when I am attending conferences with my <a href="https://ebrmn.space/peeps.html" style="color: #ff3333;">friends</a> and traversing the local neighborhood.</div> <br>
 
    <img src="IMG_6964.JPEG" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
    <img src="IMG_4435.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
