--- a/blogs.html
+++ b/blogs.html
@@ -123,7 +123,7 @@
     </div>-->
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / Blog <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt"><a href="https://gist.github.com/EdwardBerman/45ae57cbff5dcf2126bcd64d307c5e28" target="_blank" style="color: #ff3333;">COLM Reflections</a></div><br>
+      <div class="prompt"><a href="state/state_0.html" style="color: #ff3333;">State 0</a></div><br>
 
      </div>
       </div>
