--- a/state/state_0.html
+++ b/state/state_0.html
@@ -121,7 +121,7 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
- <div class="prompt">$ Eddie Berman / Blog / The State of the Bermanator (0) <a href="../blogs.html" style="color: #ff3333;">   (Back)</a></div>
+      <div class="prompt"><b>$ Eddie Berman / Blog / The State of the Bermanator (0) <a href="../blogs.html" style="color: #ff3333;">   (Back)</a></b></div>
  <p><b> Welcome to the State of the Bermanator. This is take n > 3 at starting a blog. My brief foray into music reviews and class projects recycled into long form discussions were fun, but I hope this iteration of THE STATE OF THE BERMANATOR is more fun, personal, and widely palatable. <br> <br> 
    So, what is the current state of the Bermanator? <br> <br> 
    Right now, I am in the process of getting my ducks in a row for summer and ultimately PhD programs. Hopefully they exist next year (written 05/05/2025 for context). I'm not going to bore the internet with details on those applications until after they're all sent in, I'd rather discuss my career ambitions themselves, and reflect on how I got here. <br> <br> 
