--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
       <br><div class="input">Links</div> 
       <div class="prompt">&gt; <a href="about.html" style="color: #ff3333;">About</a>, <a href="blogs.html" style="color: #ff3333;">Blog</a>, <a href="publications.html" style="color: #ff3333;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #ff3333;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #ff3333;">GitHub</a> </div> 
       <br><div class="input">Coordinates</div> 
-      <div class="input">&gt; email: f(berman,  ed, northeastern) where f(x,y,z) = x.y@z.edu</div> 
+      <div class="input">&gt; email: f(edward,  berman, cfa, harvard) where f(a,b,c,d) = a.b@c.d.edu</div> 
       <div class="input">&gt; <a href="https://www.robinwalters.com/" target="_blank" style="color: #ff3333;">Geometric Learning Lab</a> and Cosmology Group, Northeastern University</div> 
-      <div class="input">&gt; Visiting at the Center for Astrophysics Harvard | Smithsonian with <a href="https://astroai.cfa.harvard.edu/" style="color: #ff3333;" target="_blank">AstroAI</a></div> 
+      <div class="input">&gt; Center for Astrophysics Harvard | Smithsonian with <a href="https://astroai.cfa.harvard.edu/" style="color: #ff3333;" target="_blank">AstroAI</a></div> 
     </div>
 <a href="ascii-art.txt"></a>
      </div>
