--- a/state/state_0.html
+++ b/state/state_0.html
@@ -129,13 +129,17 @@
 
    So yeah, this is quite exciting. Every day I wake up, I bike down my Wizard of Oz esk Yellow Brick Road (the green bike lane on Mass. Ave), and I go to my job where I look for aliens all day. Pretty f-ing sweet :D. <br><br>
 
-   I also have a project led by my colleague and friend <a href="https://www.luisali.com/" target="_blank" style="color: #ff3333;">Luisa</a> related to GNNs using atomic data, but I'll let her fill you in on the details at a later time. <br> <br>
+   I also have a project led by my colleague and friend <a href="https://www.luisali.com/" target="_blank" style="color: #ff3333;">Luisa</a>* related to GNNs using atomic data, but I'll let her fill you in on the details at a later time. <br> <br>
 
    Big picture, I think this atomic architecture stuff is really fun, I can see myself spending my career doing research in it. As a researcher I've carved out a niche studying optimization problems with geometric constraints, and I've often wondered what the best way to apply my skills are. Robotics is certainly tempting, it feels like since we've solved many of the difficult problems with language modeling, embedding these "brains" and getting them to interface with Physical movements is the next big step towards general intelligences. That being said. I just can't help but return to atomic data, it speaks to the primal pit in my brain that drove me to study physics in the first place. If I play my cards right, I bet I could carve out an entire PhD thesis related to atomic architecture and theory for this Biomarkers retrieval problem. <br> <br>
 
    Oh, and how did I get here? That is a bit of a loaded question. Basically, I started in Astrophysics because I thought it had interesting statistics, and that is really it (and I still believe this, and I continue to do Astrophysics for this reason). My first project had to deal with something called Point-spread Function (PSF) modeling. Basically, telescopes can be a tad blurry due to atmospheric and instrumental affects, and we want to correct for this. Anyway, solving for PSF variations across the field of view of the sky had some fun geometric constraints, something something I fell down a pipeline of inductive biases, and here we are, that is all she wrote. <br> <br>
 
    So yeah, that is rendition zero of THE STATE OF THE BERMANATOR. If you want to talk further, feel free to send me a message. Please also bring me an orange :)
+
+   <br> <br>
+
+   * Eratta: Luisa's blog on the subject is now complete! <a href="https://www.luisali.com/blog/to_invertibility_and_beyond" target="_blank" style="color: #ff3333;">To Invertibility and Beyond!</a> <br> <br>
 
 
  </b>
