--- a/state/state_0.html
+++ b/state/state_0.html
@@ -139,7 +139,7 @@
 
    <br> <br>
 
-   * Eratta: Luisa's blog on the subject is now complete! <a href="https://www.luisali.com/blog/to_invertibility_and_beyond" target="_blank" style="color: #ff3333;">To Invertibility and Beyond!</a> <br> <br>
+   * Update: Luisa's blog on the subject is now complete! <a href="https://www.luisali.com/blog/to_invertibility_and_beyond" target="_blank" style="color: #ff3333;">To Invertibility and Beyond!</a> <br> <br>
 
 
  </b>
