--- a/state/state_1.html
+++ b/state/state_1.html
@@ -122,7 +122,7 @@
     </div>-->
     <div class="terminal-body"> 
       <div class="prompt"><b>$ Eddie Berman / Blog / The State of the Bermanator (1) <a href="../blogs.html" style="color: #ff3333;">   (Back)</a></b></div>
-      <p><b> <i>Groans</i>. Deciding where to publish sure is a fucking pain.<br> <br> 
+      <p><b> <i>Groans</i>. Deciding where to publish sure is a fucking pain. The writing process itself is fun, but doing the calculus on journal presitge and budgeting for publication fees and all of the rest, less fun.<br> <br> 
         It involves a couple things. A critical evaluation of the quality of one's own work, a cohesive story to match the desired venue, an alignment with ones own morals, an understanding of the well respected destinations, and potentially thousands of dollars in publication fees.
         <br> <br>
         I think also, as someone who has spent equal time in both Physics and Computer Science, I can offer somewhat of a less heard perspective. So here are some ramblings on Bermanator's experiences and lessons learned. Spoiler alert: This will culminate in the conclusion that TMLR deserves a ton more respect and does probably the most right.
