--- a/state/state_0.html
+++ b/state/state_0.html
@@ -139,7 +139,7 @@
 
    <br> <br>
 
-   * Update: Luisa's blog on the subject is now complete! It is to early too share project specific details, but you can learn about invertibility here at <a href="https://www.luisali.com/blog/to_invertibility_and_beyond" target="_blank" style="color: #ff3333;">To Invertibility and Beyond!</a> <br> <br>
+   * Update: Luisa's blog on the subject is now complete! It is too early to share project specific details, but you can learn about invertibility here at <a href="https://www.luisali.com/blog/to_invertibility_and_beyond" target="_blank" style="color: #ff3333;">To Invertibility and Beyond!</a> <br> <br>
 
 
  </b>
