--- a/state/state_1.html
+++ b/state/state_1.html
@@ -178,7 +178,7 @@ The inability to present all the time is the main drawback for me, but you can a
   <li>NeurIPS/ICML/ICLR</li>
   <li>...</li>
   <li>[Major Dropoff Numero Dos]</li>
-  <li>COLM/EMNLP/etc.</li>
+  <li>COLM (not counting my COLM paper with my friends ofc thats S tier) /EMNLP/etc.</li>
 </ol>
         <br> <br>
 
