adv writing lol

--- a/courses.html
+++ b/courses.html
@@ -137,7 +137,7 @@
 <div class="prompt">&gt; Phys 4115 Quantum Mechanics</div>  
 <div class="prompt">&gt; Math 4020 Research Capstone</div>  
 <div class="prompt">&gt; Phys 3602 Electricity and Magnetism 1</div>  
-<div class="prompt">&gt; Engw 3307 <u>Advanced</u> Writing in the Sciences</div>  
+<div class="prompt">&gt; Engw 3307 Advanced Writing in the Sciences</div>  
 <div class="prompt">&gt; Math 3275 <u>Advanced</u> Group Theory</div> 
 <div class="prompt">&gt; Math 3181 <u>Advanced</u> Probability and Statistics</div> 
 <div class="prompt">&gt; Math 3150 Real Analysis</div> 
