--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
       <div class="prompt">My main interests are at the intersection of Optics, Computer Vision, and Astronomy. I am especially interested in equivariant machine learning and computational imaging.<br> <br>
 
-        I am advised by Professor Jacqueline McCleary with the Northeastern University Cosmology Group as well as Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. I am also a visiting scientist with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
+        I am advised by Professor Jacqueline McCleary with the Northeastern University <a href="https://georgevassilakis.github.io/mccleary_group/" target="_blank" style="color: #ff3333;">Cosmology Group</a> as well as Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. I am also a visiting scientist with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
 
  Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, snail-mail me your thoughts! Below, you can find a couple of pictures of me where I am most happy ^_^, usually when I am attending conferences with my <a href="https://ebrmn.space/peeps.html" style="color: #ff3333;">friends</a> and traversing the local neighborhood.</div> <br>
 
