--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
   <div class="terminal">
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt">My Research is on symmetry breaking in machine learning and in the physical sciences. Concretely, I work on generalization and approximation error of equivariant functions, the design and application of equivariant neural networks for atomic, molecular, and optical (AMO) physics, and symmetry applied to probabilistic systems. Beyond symmetry, I spend a lot of time working on computational imaging problems in Astronomy.<br> <br>
+      <div class="prompt">I work on generalization and approximation error of equivariant functions, the design and application of equivariant neural networks for atomic, molecular, and optical (AMO) physics, and symmetry applied to probabilistic systems.<br> <br>
 
         I am advised by Professor Jacqueline McCleary with the Northeastern University <a href="https://georgevassilakis.github.io/mccleary_group/" target="_blank" style="color: #ff3333;">Cosmology Group</a> as well as Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. I am also a visiting scientist with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
 
