--- a/list.html
+++ b/list.html
@@ -120,10 +120,12 @@
       <div class="prompt">$ Eddie Berman / Reading <a href="about.html" style="color: #ff3333;">   (Back)</a></div><br>
       <div class="prompt"> Some favorites :)</div><br>
       <div class="prompt"> <a href="https://bayes.wustl.edu/etj/articles/prior.pdf" style="color: #ff3333;" target="_blank">Prior Probabilities</a></div>
-      <div class="prompt"> <a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html" style="color: #ff3333;" target="_blank">You and Your Research</a></div>
-      <div class="prompt"> <a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html" style="color: #ff3333;" target="_blank">The Bitter Lesson</a></div>
+      <div class="prompt"> <a href="https://arxiv.org/pdf/2505.23681" style="color: #ff3334;" target="_blank">Understanding Mode Connectivity via Parameter Space Symmetry</a></div>
+      <div class="prompt"> <a href="https://openreview.net/pdf?id=1G_dwmEKX-w" style="color: #ff3334;" target="_blank">Barron's Theorem for Equivariant Networks</a></div>
     <div class="prompt"> <a href="https://arxiv.org/abs/2303.04745" style="color: #ff3333;" target="_blank">A General Theory of Correct, Incorrect, and Extrinsic Equivariance</a></div>
     <div class="prompt"> <a href="https://arxiv.org/abs/2210.02984" style="color: #ff3333;" target="_blank">The Lie Derivative for Measuring Learned Equivariance</a></div>
+      <div class="prompt"> <a href="https://www.cs.virginia.edu/~robins/YouAndYourResearch.html" style="color: #ff3333;" target="_blank">You and Your Research</a></div>
+      <div class="prompt"> <a href="http://www.incompleteideas.net/IncIdeas/BitterLesson.html" style="color: #ff3333;" target="_blank">The Bitter Lesson</a></div>
       <br>
 
       </div>
