--- a/list.html
+++ b/list.html
@@ -118,7 +118,7 @@
   <div class="terminal">
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / Reading <a href="about.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt"> Some favorites. A combination of things that are relevant to my current (for example extrinsinc equivariance) and things that I just think are quite neat (for example Parameter Space Symmetries) :-). </div><br>
+      <div class="prompt"> Some favorites. A combination of things that are relevant to my current work (for example extrinsinc equivariance) and things that I just think are quite neat (for example Parameter Space Symmetries) :-). </div><br>
       <div class="prompt"> <a href="https://bayes.wustl.edu/etj/articles/prior.pdf" style="color: #ff3333;" target="_blank">Prior Probabilities</a></div>
       <div class="prompt"> <a href="https://arxiv.org/pdf/2505.23681" style="color: #ff3334;" target="_blank">Understanding Mode Connectivity via Parameter Space Symmetry</a></div>
       <div class="prompt"> <a href="https://openreview.net/pdf?id=1G_dwmEKX-w" style="color: #ff3334;" target="_blank">Barron's Theorem for Equivariant Networks</a></div>
