--- a/courses.html
+++ b/courses.html
@@ -126,12 +126,14 @@
 
 <div class="prompt">&gt; Math 7234 Optimization and Complexity (PhD Level)</div> 
 <div class="prompt">&gt; Math 7223 Riemannian Optimization (PhD Level)</div> 
+<div class="prompt">&gt; CS 7180 Geometric Structure in Deep Learning (PhD Level)</div> 
+<div class="prompt">&gt; Phys 5131 Introduction to Mathematical Modeling and Methods (Masters Level)</div> 
 <div class="prompt">&gt; Phys 5118 General Relativity and Cosmology (Masters Level)</div> 
 <div class="prompt">&gt; Math 4994 Internship</div> 
 <div class="prompt">&gt; Math 4991 Research Independent Study (Machine Learning PDE Discovery)</div> 
 <div class="prompt">&gt; Phys 4606 Mathematical and Computational Methods for Physics</div> 
 <div class="prompt">&gt; Math 4571 <u>Advanced</u> Linear Algebra</div> 
-<!--<div class="prompt">&gt; Math 4555 Complex Variables</div> -->
+<div class="prompt">&gt; Math 4555 Complex Variables</div>
 <div class="prompt">&gt; Math 4545 Fourier Series and PDEs</div> 
 <div class="prompt">&gt; Phys 4305 Thermodynamics and Statistical Mechanics</div> 
 <div class="prompt">&gt; Phys 4115 Quantum Mechanics</div>  
