--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div class="terminal-body"> 
       <div class="prompt"><b>Eddie Berman <i>(he/him/his)</i>.</b> I am a Dandy guy, Space Dandy. </div>
       <br><div class="input">Links</div> 
-      <div class="prompt">&gt; <a href="about.html" style="color: #ff3333;">About</a>, <a href="blogs.html" style="color: #ff3333;">Blog</a>, <a href="publications.html" style="color: #ff3333;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #ff3333;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #ff3333;">GitHub</a> </div> 
+      <div class="prompt">&gt; <a href="about.html" style="color: #ff3333;">About</a>, <a href="publications.html" style="color: #ff3333;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #ff3333;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #ff3333;">GitHub</a> </div> 
       <br><div class="input">Coordinates</div> 
       <div class="input">&gt; email: f(berman, ed, northeastern) where f(a,b,c) = a.b@c.edu</div> 
       <div class="input">&gt; <a href="https://www.robinwalters.com/" target="_blank" style="color: #ff3333;">Geometric Learning Lab</a> and <a href="https://georgevassilakis.github.io/mccleary_group/" target="_blank" style="color: #ff3333;">Cosmology Group</a>, Northeastern University</div> 
