--- a/list.html
+++ b/list.html
@@ -124,7 +124,8 @@
     <div class="prompt"> <a href="https://arxiv.org/abs/2303.04745" style="color: #ff3333;" target="_blank">A General Theory of Correct, Incorrect, and Extrinsic Equivariance</a></div>
     <div class="prompt"> <a href="https://arxiv.org/pdf/2510.01349" style="color: #ff3333;" target="_blank">To Augment or Not to Augment? Diagnosing Distributional Symmetry Breaking</a></div>
     <div class="prompt"> <a href="https://arxiv.org/abs/2210.02984" style="color: #ff3333;" target="_blank">The Lie Derivative for Measuring Learned Equivariance</a></div>
-      <br>
+    <div class="prompt"> <a href="https://arxiv.org/pdf/2503.02113" style="color: #ff3333;" target="_blank">Deep Learning is Not so Mysterious or Different</a></div>
+      <br> 
 
       </div>
     </div>
