--- a/list.html
+++ b/list.html
@@ -120,11 +120,11 @@
       <div class="prompt">$ Eddie Berman / Reading <a href="about.html" style="color: #ff3333;">   (Back)</a></div><br>
       <div class="prompt"> Some favorites. A combination of things that are relevant to my current work and things that I just think are quite neat :-). </div><br>
       <div class="prompt"> <a href="https://bayes.wustl.edu/etj/articles/prior.pdf" style="color: #ff3333;" target="_blank">Prior Probabilities</a></div>
-      <div class="prompt"> <a href="https://arxiv.org/pdf/2505.23681" style="color: #ff3334;" target="_blank">Understanding Mode Connectivity via Parameter Space Symmetry</a></div>
     <div class="prompt"> <a href="https://arxiv.org/abs/2303.04745" style="color: #ff3333;" target="_blank">A General Theory of Correct, Incorrect, and Extrinsic Equivariance</a></div>
     <div class="prompt"> <a href="https://arxiv.org/pdf/2510.01349" style="color: #ff3333;" target="_blank">To Augment or Not to Augment? Diagnosing Distributional Symmetry Breaking</a></div>
     <div class="prompt"> <a href="https://arxiv.org/abs/2210.02984" style="color: #ff3333;" target="_blank">The Lie Derivative for Measuring Learned Equivariance</a></div>
     <div class="prompt"> <a href="https://arxiv.org/pdf/2503.02113" style="color: #ff3333;" target="_blank">Deep Learning is Not so Mysterious or Different</a></div>
+    <div class="prompt"> <a href="https://arxiv.org/abs/2410.05499" style="color: #ff3333;" target="_blank">Unitary convolution for learning on graphs and groups</a></div>
       <br> 
 
       </div>
