--- a/list.html
+++ b/list.html
@@ -121,6 +121,7 @@
       <div class="prompt"> Some favorites. A combination of things that are relevant to my current work and things that I just think are quite neat :-). </div><br>
       <div class="prompt"> <a href="https://bayes.wustl.edu/etj/articles/prior.pdf" style="color: #ff3333;" target="_blank">Prior Probabilities</a></div>
     <div class="prompt"> <a href="https://arxiv.org/abs/2303.04745" style="color: #ff3333;" target="_blank">A General Theory of Correct, Incorrect, and Extrinsic Equivariance</a></div>
+    <div class="prompt"> <a href="https://arxiv.org/abs/2305.17592" style="color: #ff3333;" target="_blank">Approximation-Generalization Trade-offs under (Approximate) Group Equivariance</a></div>
     <div class="prompt"> <a href="https://arxiv.org/pdf/2510.01349" style="color: #ff3333;" target="_blank">To Augment or Not to Augment? Diagnosing Distributional Symmetry Breaking</a></div>
     <div class="prompt"> <a href="https://arxiv.org/abs/2210.02984" style="color: #ff3333;" target="_blank">The Lie Derivative for Measuring Learned Equivariance</a></div>
     <div class="prompt"> <a href="https://arxiv.org/pdf/2503.02113" style="color: #ff3333;" target="_blank">Deep Learning is Not so Mysterious or Different</a></div>
