--- a/list.html
+++ b/list.html
@@ -119,13 +119,13 @@
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / Reading <a href="about.html" style="color: #ff3333;">   (Back)</a></div><br>
       <div class="prompt"> Some favorites. A combination of things that are relevant to my current work and things that I just think are quite neat :-). </div><br>
-      <div class="prompt"> <a href="https://bayes.wustl.edu/etj/articles/prior.pdf" style="color: #ff3333;" target="_blank">Prior Probabilities</a></div>
-    <div class="prompt"> <a href="https://arxiv.org/abs/2303.04745" style="color: #ff3333;" target="_blank">A General Theory of Correct, Incorrect, and Extrinsic Equivariance</a></div>
-    <div class="prompt"> <a href="https://arxiv.org/abs/2305.17592" style="color: #ff3333;" target="_blank">Approximation-Generalization Trade-offs under (Approximate) Group Equivariance</a></div>
-    <div class="prompt"> <a href="https://arxiv.org/pdf/2510.01349" style="color: #ff3333;" target="_blank">To Augment or Not to Augment? Diagnosing Distributional Symmetry Breaking</a></div>
-    <div class="prompt"> <a href="https://arxiv.org/abs/2210.02984" style="color: #ff3333;" target="_blank">The Lie Derivative for Measuring Learned Equivariance</a></div>
-    <div class="prompt"> <a href="https://arxiv.org/pdf/2503.02113" style="color: #ff3333;" target="_blank">Deep Learning is Not so Mysterious or Different</a></div>
-    <div class="prompt"> <a href="https://arxiv.org/abs/2410.05499" style="color: #ff3333;" target="_blank">Unitary convolution for learning on graphs and groups</a></div>
+      <div class="prompt"> <a href="https://bayes.wustl.edu/etj/articles/prior.pdf" style="color: #ff3333;" target="_blank">Prior Probabilities</a>. If you don't know which prior to use, what do you do? How can groups acting on the parameters of a distribution inform the prior?</div>
+    <div class="prompt"> <a href="https://arxiv.org/abs/2303.04745" style="color: #ff3333;" target="_blank">A General Theory of Correct, Incorrect, and Extrinsic Equivariance</a>. When equivariance conditions of the task are not strictly satisfied, do equivariance neural networks fail gracefully? What is the best we can do?</div>
+    <div class="prompt"> <a href="https://arxiv.org/abs/2305.17592" style="color: #ff3333;" target="_blank">Approximation-Generalization Trade-offs under (Approximate) Group Equivariance</a>. Establishing the limits of equivariant function approximators</div>
+    <div class="prompt"> <a href="https://arxiv.org/pdf/2510.01349" style="color: #ff3333;" target="_blank">To Augment or Not to Augment? Diagnosing Distributional Symmetry Breaking</a>. How the fuck is QM9 canonicalized? Are we giving non equivariant functions an unfair advantage on baselines?</div>
+    <div class="prompt"> <a href="https://arxiv.org/abs/2210.02984" style="color: #ff3333;" target="_blank">The Lie Derivative for Measuring Learned Equivariance</a>. Vision transformers are more translation equivariant than CNNs. Don't believe me? Then measure!</div>
+    <div class="prompt"> <a href="https://arxiv.org/pdf/2503.02113" style="color: #ff3333;" target="_blank">Deep Learning is Not so Mysterious or Different</a>. title.</div>
+    <div class="prompt"> <a href="https://arxiv.org/abs/2410.05499" style="color: #ff3333;" target="_blank">Unitary convolution for learning on graphs and groups</a>. Preserve smoothness (as measured by the Rayleigh quotient).</div>
       <br> 
 
       </div>
