--- a/about.html
+++ b/about.html
@@ -132,9 +132,13 @@
    <img src="IMG_4435.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
    <img src="silly.png" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;"> <br>
 <img src="cfa.jpg" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;">
-      <br><div class="input">Jukebox</div> 
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0tkBOcK7oRVXQJY97zzSvr?utm_source=generator&theme=0" width="50%" height="75" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-<a href="ascii-art.txt"></a>
+
+<br><div class="input">Potpourri</div>
+
+Ask me about Julia, Cowboy Bebop, Space Dandy, the 1980 Miracle on Ice, Jesper Bratt, Cities and Ambition, Sonny Boy, Biking in Boston, how I fell in love with science, journal politics. Tell me about your favorite experience while traveling. I've had 3 concussions (and counting)
+
+<br><br> Don't ask me about New Jersey.
+
      </div>
       </div>
     </div>
