--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
 
 <br><div class="input">Potpourri</div>
 
-Ask me about Julia, Cowboy Bebop, Space Dandy, the 1980 Miracle on Ice, Jesper Bratt, Cities and Ambition, Sonny Boy, Biking in Boston, how I fell in love with science, journal politics. Tell me about your favorite experience while traveling. I've had 3 concussions (and counting)
+<br>Ask me about Julia, Cowboy Bebop, Space Dandy, the 1980 Miracle on Ice, Jesper Bratt, Cities and Ambition, Sonny Boy, Biking in Boston, how I fell in love with science, journal politics. Tell me about your favorite experience while traveling. I've had 3 concussions (and counting)
 
 <br><br> Don't ask me about New Jersey.
 
