--- a/about.html
+++ b/about.html
@@ -118,11 +118,11 @@
   <div class="terminal">
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt">I currently work on generalization and approximation error of equivariant functions, the design and application of equivariant neural networks for AMO physics and robotics, and symmetry as a lens to understand uncertainty. Previously, I focused on computational imaging, with applications in gravitational lensing analysis.<br> <br>
+      <div class="prompt">I am currently interested in exploring methods of relaxed and approximate equivariance in neural networks, theoretical characterizations and implications of distributional symmetry breaking, and applications of these ideas in molecular physics and materials science. Broadly, I want to relax equivariance constraints to make equivariant neural networks more scalable and adaptable, while still keeping symmetry as a relevant prior. If you are interested in collaborating on any of these topics, or think I might fit the bill on some project, feel free to reach out. Previously, I focused on computational imaging, with applications in gravitational lensing analysis.<br> <br>
 
         I am advised by Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a> as well as Professor Jacqueline McCleary with the Northeastern University <a href="https://mcclearyj.github.io/mccleary_group/" target="_blank" style="color: #ff3333;">Cosmology Group</a>. I am also a visiting scientist with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
 
- Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, snail-mail me your thoughts! Going forward, I'm interested in exploring methods of relaxed and approximate equivariance, characterizing distributional symmetry breaking, and applications of these ideas in molecular physics and materials science. If you are interested in collaborating on any of these topics, or think I might fit the bill on some project, feel free to reach out. 
+ Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, snail-mail me your thoughts!  
 
  <br><br> Below, you can find a couple of pictures of me where I am most happy ^_^, usually when I am attending conferences with my <a href="https://ebrmn.space/peeps.html" style="color: #ff3333;">friends</a> and traversing the local neighborhood.</div> <br>
 
