--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
 
 <br><div class="input">Potpourri</div>
 
-<br>Ask me about: Julia (the language), Julia (from Cowboy Bebop), Space Dandy, Swapfest at the Albany Street Garage, the 1980 Miracle on Ice, Jesper Bratt, Cities and Ambition, Sonny Boy, Biking in Boston, how I fell in love with science, and journal politics from a space cowboy turned symmetry skeptic. Tell me about your favorite experience while traveling. I've had 3 concussions (and counting).
+<br>Ask me about: Julia (the language), Julia (from Cowboy Bebop), Space Dandy, Swapfest at the Albany Street Garage, the 1980 Miracle on Ice, Jesper Bratt, Cities and Ambition, Sonny Boy, Biking in Boston, how I fell in love with science, and journal politics from a space cowboy turned symmetry skeptic. Tell me about your favorite experience while traveling. I've had 3 concussions (and counting). One time I contributed to <a href="https://de.wikipedia.org/wiki/Michael_T%C3%BCxen" style="color: #ff3333;">this</a> wikipedia article.
 
 <br><br> Don't ask me about New Jersey.
 
