--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
   <div class="terminal">
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt">Good morning! Right now, <u>I am trying to assess the maximal extent of equivariant neural networks.</u> I enjoy thinking about questions such as: When is symmetry overconstraining my model, and how can I alleviate this with constraint relaxations? If my model is overconstrained, how well can it perform? At what point does data augmentation and compute close the gap between equivariant and unconstrained models? When can frame averaging serve as a viable alternative to equivariant architectures? If you are interested in collaborating on any of these topics, or think I might fit the bill on some project, feel free to reach out.<br> <br>
+      <div class="prompt">I am a space cowboy turned symmetry skeptic. Currently, <u>I am trying to assess the maximal extent of equivariant neural networks</u>. I use techniques from topology, measure theory, and of course, representation theory. I also dabble in conformal prediction, and in a past life I worked on computational imaging. If you are interested in collaborating on any of these topics, or think I might fit the bill on some project, feel free to reach out.<br> <br>
 
         I am advised by Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. I am also a visiting scientist with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
 
