--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
 
         I am advised by Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. I am also a visiting scientist with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
 
- Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, snail-mail me your thoughts!  
+ Here's <a href="list.html" style="color: #ff3333;">some material</a> that's been occupying my mind lately, snail-mail me your thoughts! Here is some (non) academic <a href="pop.html" style="color: #ff3333;">material</a> that his been occupying my mind, these can serve as conversation starters or oppurtunities for snap judgements :).
 
  <br><br> Below, you can find a couple of pictures of me where I am most happy ^_^, usually when I am attending conferences with my <a href="https://ebrmn.space/peeps.html" style="color: #ff3333;">friends</a> and traversing the local neighborhood.</div> <br>
 
