--- a/pop.html
+++ b/pop.html
@@ -133,6 +133,7 @@
       <div class="prompt"> <a href="https://shirtz.cool/?srsltid=AfmBOoqEFOO-tq78UwGfhU2K5_j5DXBgqg9USZ5FRjYKmu1KwHK36Bw8" style="color: #ff3333;" target="_blank">Cool Shirtz</a>. Drip or drown?</div><br>
       <div class="prompt"> <a href="https://en.wikipedia.org/wiki/Cowboy_Bebop" style="color: #ff3333;" target="_blank">Cowboy Bebop</a>. I want to reinvent myself every once in a while.</div><br>
       <div class="prompt"> <a href="https://en.wikipedia.org/wiki/Sonny_Boy_(TV_series)" style="color: #ff3333;" target="_blank">Sonny Boy</a>. Coming out of your shell. Drifting.</div><br>
+      <div class="prompt"> <a href="https://magazine.032c.com/magazine" style="color: #ff3333;" target="_blank">032c</a>. Whatever art is, this is art.</div><br>
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=7Pq-S557XQU" style="color: #ff3333;" target="_blank">Human's need not apply</a>. Ahead of its time. What is the human relationship with automation? What is our specific relationship with the next iterations of AI and robotics.</div><br>
       
 
