--- a/pop.html
+++ b/pop.html
@@ -134,6 +134,7 @@
       <div class="prompt"> <a href="https://en.wikipedia.org/wiki/Cowboy_Bebop" style="color: #ff3333;" target="_blank">Cowboy Bebop</a>. I want to reinvent myself every once in a while.</div><br>
       <div class="prompt"> <a href="https://en.wikipedia.org/wiki/Sonny_Boy_(TV_series)" style="color: #ff3333;" target="_blank">Sonny Boy</a>. Coming out of your shell. Drifting.</div><br>
       <div class="prompt"> <a href="https://magazine.032c.com/magazine" style="color: #ff3333;" target="_blank">032c</a>. Whatever art is, this is art.</div><br>
+      <div class="prompt"> <a href="https://open.spotify.com/track/4blPH3Uy89WnOnYlIv7Ev4?si=3c3a2c97511b4215" style="color: #ff3333;" target="_blank">Rat</a>. I fell for circuit boards, rocket ships, and pictures of the stars. If only you could be what you pretend you are.</div><br>
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=7Pq-S557XQU" style="color: #ff3333;" target="_blank">Human's need not apply</a>. Ahead of its time. What is the human relationship with automation? What is our specific relationship with the next iterations of AI and robotics.</div><br>
       
 
