--- a/pop.html
+++ b/pop.html
@@ -135,6 +135,8 @@
       <div class="prompt"> <a href="https://en.wikipedia.org/wiki/Sonny_Boy_(TV_series)" style="color: #ff3333;" target="_blank">Sonny Boy</a>. Coming out of your shell. Drifting.</div><br>
       <div class="prompt"> <a href="https://magazine.032c.com/magazine" style="color: #ff3333;" target="_blank">032c</a>. Whatever art is, this is art.</div><br>
       <div class="prompt"> <a href="https://open.spotify.com/track/4blPH3Uy89WnOnYlIv7Ev4?si=3c3a2c97511b4215" style="color: #ff3333;" target="_blank">Rat</a>. I fell for circuit boards, rocket ships, and pictures of the stars. If only you could be what you pretend you are.</div><br>
+      <div class="prompt"> <a href="https://en.wikipedia.org/wiki/Hockey_Night_in_Canada" style="color: #ff3333;" target="_blank">Hockey Night in Canada</a>. Saturday night.</div><br>
+      <div class="prompt"> <a href="https://en.wikipedia.org/wiki/Neon_Genesis_Evangelion" style="color: #ff3333;" target="_blank">Evangelion</a>. Why do you pilot the Eva? (I try not to consume short form content like reels, shorts, etc. But when I do, it is almost exclusively hockey related or Evangelion brain rot XD)</div><br>
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=7Pq-S557XQU" style="color: #ff3333;" target="_blank">Human's need not apply</a>. Ahead of its time. What is the human relationship with automation? What is our specific relationship with the next iterations of AI and robotics.</div><br>
       
 
