--- a/pop.html
+++ b/pop.html
@@ -137,6 +137,7 @@
       <div class="prompt"> <a href="https://open.spotify.com/track/4blPH3Uy89WnOnYlIv7Ev4?si=3c3a2c97511b4215" style="color: #ff3333;" target="_blank">Rat</a>. I fell for circuit boards, rocket ships, and pictures of the stars. If only you could be what you pretend you are.</div><br>
       <div class="prompt"> <a href="https://en.wikipedia.org/wiki/Hockey_Night_in_Canada" style="color: #ff3333;" target="_blank">Hockey Night in Canada</a>. Saturday night.</div><br>
       <div class="prompt"> <a href="https://en.wikipedia.org/wiki/Neon_Genesis_Evangelion" style="color: #ff3333;" target="_blank">Evangelion</a>. Why do you pilot the Eva? (I try not to consume short form content like reels, shorts, etc. But when I do, it is almost exclusively hockey related or Evangelion brain rot XD)</div><br>
+      <div class="prompt"> <a href="https://www.rzhu.cc/thoughts/2025/raytrace.html" style="color: #ff3333;" target="_blank">Ray Tracing</a>. I wish I knew more about this realm of graphics.</div><br>
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=7Pq-S557XQU" style="color: #ff3333;" target="_blank">Human's need not apply</a>. Ahead of its time. What is the human relationship with automation? What is our specific relationship with the next iterations of AI and robotics.</div><br>
       
 
