--- a/pop.html
+++ b/pop.html
@@ -139,6 +139,7 @@
       <div class="prompt"> <a href="https://en.wikipedia.org/wiki/Neon_Genesis_Evangelion" style="color: #ff3333;" target="_blank">Evangelion</a>. Why do you pilot the Eva? (I try not to consume short form content like reels, shorts, etc. But when I do, it is almost exclusively hockey related or Evangelion brain rot XD)</div><br>
       <div class="prompt"> <a href="https://www.rzhu.cc/thoughts/2025/raytrace.html" style="color: #ff3333;" target="_blank">Ray Tracing</a>. I wish I knew more about this realm of graphics.</div><br>
       <div class="prompt"> <a href="https://www.hockeyfights.com/" style="color: #ff3333;" target="_blank">Hockey Fights</a>. Get em.</div><br>
+      <div class="prompt"> <a href="https://web.cs.ucdavis.edu/~rogaway/papers/moral-fn.pdf" style="color: #ff3333;" target="_blank">The Moral Character of Cryptographic Work</a>. Academics should think about the implications of their research. Shoutout Jake for showing me this.</div><br>
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=7Pq-S557XQU" style="color: #ff3333;" target="_blank">Human's need not apply</a>. Ahead of its time. What is the human relationship with automation? What is our specific relationship with the next iterations of AI and robotics.</div><br>
       
 
