--- a/pop.html
+++ b/pop.html
@@ -141,6 +141,7 @@
       <div class="prompt"> <a href="https://www.hockeyfights.com/" style="color: #ff3333;" target="_blank">Hockey Fights</a>. Get em.</div><br>
       <div class="prompt"> <a href="https://web.cs.ucdavis.edu/~rogaway/papers/moral-fn.pdf" style="color: #ff3333;" target="_blank">The Moral Character of Cryptographic Work</a>. Academics should think about the implications of their research. Shoutout Jake for showing me this.</div><br>
       <div class="prompt"> <a href="https://scottaaronson.blog/?p=8088" style="color: #ff3333;" target="_blank">Busy Beaver of 5</a>. S(5) = 47,176,870.</div><br>
+      <div class="prompt"> <a href="https://bulbapedia.bulbagarden.net/wiki/Psyduck_(Pok%C3%A9mon)" style="color: #ff3333;" target="_blank">Psyduck</a>. Me.</div><br>
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=7Pq-S557XQU" style="color: #ff3333;" target="_blank">Human's need not apply</a>. Ahead of its time. What is the human relationship with automation? What is our specific relationship with the next iterations of AI and robotics.</div><br>
       
 
