--- a/pop.html
+++ b/pop.html
@@ -143,6 +143,7 @@
       <div class="prompt"> <a href="https://scottaaronson.blog/?p=8088" style="color: #ff3333;" target="_blank">Busy Beaver of 5</a>. S(5) = 47,176,870.</div><br>
       <div class="prompt"> <a href="https://bulbapedia.bulbagarden.net/wiki/Psyduck_(Pok%C3%A9mon)" style="color: #ff3333;" target="_blank">Psyduck</a>. Me.</div><br>
       <div class="prompt"> <a href="https://thinkingmachines.ai/blog/defeating-nondeterminism-in-llm-inference/" style="color: #ff3333;" target="_blank">Defeating Nondeterminism in LLM Inference</a>. Reject defeatism.</div><br>
+      <div class="prompt"> <a href="https://seniormars.com/" style="color: #ff3333;" target="_blank">SeniorMars</a>. This guy got me into Linux stuff. I emailed him once. Wonderfully nice person :)</div><br>
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=7Pq-S557XQU" style="color: #ff3333;" target="_blank">Human's need not apply</a>. Ahead of its time. What is the human relationship with automation? What is our specific relationship with the next iterations of AI and robotics.</div><br>
       
 
