--- a/pop.html
+++ b/pop.html
@@ -144,8 +144,9 @@
       <div class="prompt"> <a href="https://bulbapedia.bulbagarden.net/wiki/Psyduck_(Pok%C3%A9mon)" style="color: #ff3333;" target="_blank">Psyduck</a>. Me.</div><br>
       <div class="prompt"> <a href="https://thinkingmachines.ai/blog/defeating-nondeterminism-in-llm-inference/" style="color: #ff3333;" target="_blank">Defeating Nondeterminism in LLM Inference</a>. Reject defeatism.</div><br>
       <div class="prompt"> <a href="https://seniormars.com/" style="color: #ff3333;" target="_blank">SeniorMars</a>. This guy got me into Linux stuff. I emailed him once. Wonderfully nice person :)</div><br>
-      <div class="prompt"> <a href="https://ed.ted.com/lessons/four-sisters-in-ancient-rome-ray-laurence" style="color: #ff3333;" target="_blank">Four sisters in Ancient Rome - Ray Laurence</a>. Basis for the Cambridge Latin Course... How often do you think about the Roman empire? Rome. City of the Great Empire. Rome. Legacy Spreads Like Fire. So much invented so much acheived. Can't you see how Rome affects your society?</div><br>
+      <div class="prompt"> <a href="https://ed.ted.com/lessons/four-sisters-in-ancient-rome-ray-laurence" style="color: #ff3333;" target="_blank">Four sisters in Ancient Rome</a>. Basis for the Cambridge Latin Course... How often do you think about the Roman empire? Rome. City of the Great Empire. Rome. Legacy Spreads Like Fire. So much invented so much acheived. Can't you see how Rome affects your society?</div><br>
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=7Pq-S557XQU" style="color: #ff3333;" target="_blank">Human's need not apply</a>. Ahead of its time. What is the human relationship with automation? What is our specific relationship with the next iterations of AI and robotics.</div><br>
+      <div class="prompt"> <a href="https://open.spotify.com/track/511ZEJJELVd9gYpS9u63us?si=0ec1ec5966524a81" style="color: #ff3333;" target="_blank">See you at your funeral</a>. Fav song. Marcelo showed me this one :)</div><br>
       
 
       </div>
