--- a/list.html
+++ b/list.html
@@ -126,6 +126,7 @@
       <div class="prompt"> <a href="https://arxiv.org/abs/2210.02984" style="color: #ff3333;" target="_blank">The Lie Derivative for Measuring Learned Equivariance</a>. Vision transformers are more translation equivariant than CNNs. Don't believe me? Then measure!</div><br>
       <div class="prompt"> <a href="https://arxiv.org/pdf/2503.02113" style="color: #ff3333;" target="_blank">Deep Learning is Not so Mysterious or Different</a>. title.</div><br>
       <div class="prompt"> <a href="https://arxiv.org/abs/2410.05499" style="color: #ff3333;" target="_blank">Unitary convolution for learning on graphs and groups</a>. Preserve smoothness (as measured by the Rayleigh quotient).</div>
+      <div class="prompt"> <a href="https://arxiv.org/pdf/2511.14042" style="color: #ff3333;" target="_blank">Splat Regression Models</a>. SPLAT!</div>
       <br> 
 
       </div>
