--- a/pop.html
+++ b/pop.html
@@ -151,6 +151,7 @@
       <div class="prompt"> <a href="https://en.wikipedia.org/wiki/Bullshit_Jobs" style="color: #ff3333;" target="_blank">Bullshit Jobs</a>. Flunkies, Goons, Duct tapers, Box tickers, and Taskmasters.</div><br>
       <div class="prompt"> <a href="https://ncatlab.org/nlab/show/HomePage" style="color: #ff3333;" target="_blank">nLab</a>. Knows all.</div><br>
       <div class="prompt"> <a href="https://www.youtube.com/watch?v=nbY_aP-alkw" style="color: #ff3333;" target="_blank">Hakuna Matata</a>. It means no worries.</div><br>
+      <div class="prompt"> <a href="https://www.youtube.com/watch?v=5zG6QNaVXMY" style="color: #ff3333;" target="_blank">3Blew1Blown</a>. The only Taylor I like is the series.</div><br>
       <div class="prompt"> <a href="https://dummit.cos.northeastern.edu/" style="color: #ff3333;" target="_blank">Evan Dummit Course Notes</a>. Welp. You've reached the end of this page. Hope it was helpful (iykyk).</div><br>
       
 
