--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <span class="dot green-dot"></span>-
     </div>-->
     <div class="terminal-body"> 
-      <div class="prompt"><b>Eddie Berman <i>(he/him/his)</i>.</b> We can watch the highlights in hell. I hope they're televised.</div>
+      <div class="prompt"><b>Eddie Berman <i>(he/him/his)</i>.</b> <br><br>We can watch the highlights in hell. I hope they're televised.</div>
       <br><div class="input">Links</div> 
       <div class="prompt">&gt; <a href="about.html" style="color: #ff3333;">About</a>, <a href="publications.html" style="color: #ff3333;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #ff3333;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #ff3333;">GitHub</a> </div> 
       <br><div class="input">Coordinates</div> 
