--- a/list.html
+++ b/list.html
@@ -117,7 +117,7 @@
 <body>
   <div class="terminal">
     <div class="terminal-body"> 
-      <div class="prompt">$ Eddie Berman / Reading <a href="about.html" style="color: #ff3333;">   (Back)</a></div><br>
+      <div class="prompt">$ Eddie Berman / About / Reading <a href="about.html" style="color: #ff3333;">   (Back)</a></div><br>
       <div class="prompt"> Some favorites. A combination of things that are relevant to my current work and things that I just think are quite neat :-). </div><br>
       <div class="prompt"> <a href="https://bayes.wustl.edu/etj/articles/prior.pdf" style="color: #ff3333;" target="_blank">Prior Probabilities</a>. If you don't know which prior to use, what do you do? How can groups acting on the parameters of a distribution inform the prior?</div><br>
       <div class="prompt"> <a href="https://arxiv.org/abs/2303.04745" style="color: #ff3333;" target="_blank">A General Theory of Correct, Incorrect, and Extrinsic Equivariance</a>. When equivariance conditions of the task are not strictly satisfied, do equivariant neural networks fail gracefully? What is the best we can do?</div><br>
