--- a/pop.html
+++ b/pop.html
@@ -117,7 +117,7 @@
 <body>
   <div class="terminal">
     <div class="terminal-body"> 
-      <div class="prompt">$ Eddie Berman / More Reading <a href="about.html" style="color: #ff3333;">   (Back)</a></div><br>
+      <div class="prompt">$ Eddie Berman / About / More Reading <a href="about.html" style="color: #ff3333;">   (Back)</a></div><br>
       <div class="prompt"> Some (more) favorites. A combination of things that are (not) relevant to my current work and things that I just think are quite neat :-). Some of these are hinted at in the "Potpourri" section at the bottom of the about me page. These can serve as conversation starters, if you'd like. It is by no means an exhaustive list. For your viewing pleasure, I have not bothered to organize it in any way :). Best just to scroll through and see what catches your eye.</div><br>
       <div class="prompt"> <a href="https://paulgraham.com/cities.html" style="color: #ff3333;" target="_blank">Cities and Ambition</a>. Great cities attract ambitious people. You can sense it when you walk around one... The surprising thing is how different these messages can be.</div><br>
       <div class="prompt"> <a href="https://open.spotify.com/album/4h2ME3sBJVi1X3KTwLJXnn?si=eGMfOWSITq62SoeUTzBbqw" style="color: #ff3333;" target="_blank">Somewhere City</a>. Speaking of cities, welcome to somewhere city.</div><br>
