--- a/utils.html
+++ b/utils.html
@@ -121,6 +121,7 @@
       <div class="prompt">Some tidbits.<br> <br>
       <div class="prompt"> <a href="https://ebrmn.space/Berman_Edward_CRA_Research_Statement.pdf" style="color: #ff3333;" target="_blank">CRA Outstanding Undergraduate Researcher Award Research Statement</a>. I was named an honorable mention for the Computing Research Association (CRA) Outstanding Undergraduate Researcher Award for 2025. There may be a bit of survivorship bias, but in any case, future applicants may use my statement attached as a reference!</div><br>
       <div class="prompt"> <a href="https://ebrmn.space/mlpde.pdf" style="color: #ff3333;" target="_blank">Machine Learning Model Discovery</a>. Final product for an independent study course on the relationship between stochastic processes, partial differential equations, and machine learning!</div><br>
+      <div class="prompt"> <a href="https://jakegines.in/research/equi-uq" style="color: #ff3333;" target="_blank">Joint Blog w/ JG</a>. How the Sausage was made.</div><br>
       <div class="prompt"> <a href="https://github.com/EdwardBerman/DotfilesBebop" style="color: #ff3333;" target="_blank">My Dotfiles</a>. Disorganized as all hell. Screen saver is from Cowboy Bebop (See you, space cowboy). I am not religiously attached to any of my choices, though, I do like BSPWN a fair bit. When I start my PhD I will probably switch to Nix. <a href=https://jakegines.in/blog/2025/why-nix" style="color:#ff3333;" target="_blank">Why Nix?</a></div><br>
 
 
